Basis mapper en basis manager af

--- a/HAN.OOSE.ICDE.API/HAN.OOSE.ICDE.API.csproj
+++ b/HAN.OOSE.ICDE.API/HAN.OOSE.ICDE.API.csproj
@@ -16,6 +16,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\HAN.OOSE.ICDE.Domain\HAN.OOSE.ICDE.Domain.csproj" />
+    <ProjectReference Include="..\HAN.OOSE.ICDE.Logic.Mapping\HAN.OOSE.ICDE.Logic.Mapping.csproj" />
+    <ProjectReference Include="..\HAN.OOSE.ICDE.Logic\HAN.OOSE.ICDE.Logic.csproj" />
     <ProjectReference Include="..\HAN.OOSE.ICDE.Persistency.Database\HAN.OOSE.ICDE.Persistency.Database.csproj" />
     <ProjectReference Include="..\HAN.OOSE.ICDE.Persistency.Repository\HAN.OOSE.ICDE.Persistency.Database.Repository.csproj" />
   </ItemGroup>
