--- a/HAN.OOSE.ICDE.Logic.Mapping/HAN.OOSE.ICDE.Logic.Mapping.csproj
+++ b/HAN.OOSE.ICDE.Logic.Mapping/HAN.OOSE.ICDE.Logic.Mapping.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -7,10 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\HAN.OOSE.ICDE.Domain\HAN.OOSE.ICDE.Domain.csproj" />
-    <ProjectReference Include="..\HAN.OOSE.ICDE.Logic.Mapping\HAN.OOSE.ICDE.Logic.Mapping.csproj" />
     <ProjectReference Include="..\HAN.OOSE.ICDE.Persistency.Database.Domain\HAN.OOSE.ICDE.Persistency.Database.Domain.csproj" />
-    <ProjectReference Include="..\HAN.OOSE.ICDE.Persistency.Repository\HAN.OOSE.ICDE.Persistency.Database.Repository.csproj" />
   </ItemGroup>
 
 </Project>
