Methods van interfaces in managers geimplementeerd

--- a/HAN.OOSE.ICDE.API/appsettings.json
+++ b/HAN.OOSE.ICDE.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Server=.\\;Database=ICDE;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Default": "Data Source=host.docker.internal,1433;Initial Catalog=ICDE;Persist Security Info=True;User ID=sa;Password=Madeliefje99!;Trust Server Certificate=True"
   },
   "AllowedHosts": "*"
 }
