Authenticatie en authorisatie

--- a/HAN.OOSE.ICDE.API/appsettings.json
+++ b/HAN.OOSE.ICDE.API/appsettings.json
@@ -6,7 +6,13 @@
     }
   },
   "ConnectionStrings": {
-    "Default": ""
+    "Default": "Data Source=host.docker.internal,1433;Initial Catalog=ICDE;Persist Security Info=True;User ID=sa;Password=Madeliefje99!;Trust Server Certificate=True"
+  },
+  "JwtOptions": {
+    "Issuer": "https://localhost:7018/",
+    "Audience": "https://localhost:7018/",
+    "SigningKey": "HAN_OOSE_ICDE_ROWAN_BOB_2023_2024",
+    "ExpirationSeconds": 3600
   },
   "AllowedHosts": "*"
 }
