--- a/HAN.OOSE.ICDE.API/appsettings.json
+++ b/HAN.OOSE.ICDE.API/appsettings.json
@@ -5,9 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": {
-    "Default": ""
-  },
+    "ConnectionStrings": {
+        "Default": "Server=localhost;Database=ICDE;Trusted_Connection=True;Trust Server Certificate=True;"
+    },
   "JwtOptions": {
     "Issuer": "https://localhost:7018/",
     "Audience": "https://localhost:7018/",
